--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-devtools",
-  "version": "5.1.4",
+  "name": "@jovercao/vue-devtools",
+  "version": "6.0.0-beta1",
   "description": "An electron devtools extension for debugging Vue.js applications.",
   "keywords": [
     "electron",
@@ -51,6 +51,6 @@
     ]
   },
   "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
+    "registry": "https://registry.npmjs.org"
   }
 }
